Fixed baseurl to match repo name

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: "The Fencing Archive"
-description: "19th Century Italian Fencing Translations & Notes"
+title: "Methods of the Sword Archive"
+description: "Fencing Articles and Translations"
 author: "Your Name"
 theme: jekyll-theme-primer # We override this, but this keeps the build stable
-url: "https://YOUR_USERNAME.github.io"
-baseurl: "/fencing-articles" # MUST match your repository name
+url: "https://methodsofthesword.github.io"
+baseurl: "/articles" # MUST match your repository name
 markdown: kramdown
 permalink: /:year/:month/:day/:title/
