--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,4 @@ baseurl: "/articles" # MUST match your repository name
 markdown: kramdown
 permalink: /:year/:month/:day/:title/
 baseurl: "/articles"
+url: "https://methodsofthesword.github.io"
