--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Methods of the Sword Archive"
-description: "Fencing Articles and Translations"
+title: "Methods of the Sword"
+description: "Fencing Articles"
 author: "Your Name"
 theme: jekyll-theme-primer # We override this, but this keeps the build stable
 url: "https://methodsofthesword.github.io"
